--- a/Laboratorium 2 - Slider/style.css
+++ b/Laboratorium 2 - Slider/style.css
@@ -1,4 +1,6 @@
 body{
+    position: relative;
+    height: 100vh;
     background-color: wheat;
 }
 
@@ -9,23 +11,11 @@ header{
 }
 
 #slider {
-    width: 600px;
-    height: 400px;
-    border-radius: 20px;
-    box-shadow: 10px 10px 10px #bbb;
-    margin: 100px auto 0 auto;
-    overflow: hidden;
-}
-
-#slider .slides {
     display: flex;
-    animation-name: pociag-w-lewo;
-    animation-duration: 4s;
-    animation-delay: 1s;
-    animation-timing-function: ease-in-out;
+
 }
 
-.Poprzednie, .Następne {
+.Previous, .Next {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -40,17 +30,24 @@ header{
     user-select: none;
 }
 
-.Dalej {
+.Next {
+    right: 0;
+}
+
+#buttons {
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+}
+
+.Next {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
 
-.Wstecz:hover, .Dalej:hover {
+.Previous:hover, .Next:hover {
     background-color: rgba(0,0,0,0.8);
-}
-
-.active, .dot:hover {
-    background-color: #717171;
 }
 
 .dot {
@@ -62,4 +59,18 @@ header{
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+  
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
 }
