--- a/Laboratorium 2 - Slider/style.css
+++ b/Laboratorium 2 - Slider/style.css
@@ -1,23 +1,33 @@
 body{
     position: relative;
-    height: 100vh;
+    height: 90vh;
     background-color: wheat;
 }
 
 header{
     text-align: center;
-    font-size: 50px;
+    font-size: 25px;
     font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
 }
 
 #slider {
-    display: flex;
-
+    position: relative;
+    width: 600px;
+    height: 400px;
+    overflow: hidden;
+    margin: 100px auto 0px auto;
 }
 
-.Previous, .Next {
+#first, #second {
     cursor: pointer;
     position: absolute;
+    top: 50%;
+    width: auto;
+}
+
+#first a, #second a {
+    cursor: pointer;
     top: 50%;
     width: auto;
     margin-top: -22px;
@@ -30,18 +40,7 @@ header{
     user-select: none;
 }
 
-.Next {
-    right: 0;
-}
-
-#buttons {
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-}
-
-.Next {
+#second {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
