--- a/Laboratorium 2 - Slider/style.css
+++ b/Laboratorium 2 - Slider/style.css
@@ -32,7 +32,7 @@ header{
     width: auto;
     margin-top: -22px;
     padding: 16px;
-    color: rgb(10, 10, 10);
+    color: #bbb;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
@@ -46,7 +46,7 @@ header{
 }
 
 .Previous:hover, .Next:hover {
-    background-color: rgba(0,0,0,0.8);
+    background-color: #717171;
 }
 
 .dot {
