--- a/Laboratorium 4 - NoteKeep/style.css
+++ b/Laboratorium 4 - NoteKeep/style.css
@@ -31,6 +31,7 @@ input[type=text]{
     color: black;
     width: 100%;
     padding: 5px 0px 5px 0px;
+    padding-left: 10px ;
 }
 
 .headerButtonsContainer{
@@ -112,8 +113,9 @@ input[type=text]{
 
 /* NOTES */
 .NotesContainer{
-    min-height: 100vw;
+    min-height: 92.7vh;
     padding: 10px;
+    background-color: #e7e4ca;
 }
 
 .NotesGrid {
