--- a/Laboratorium 6 - Ball In The Hole/style.css
+++ b/Laboratorium 6 - Ball In The Hole/style.css
@@ -1,4 +1,74 @@
+body{
+    background: rgb(151,238,234);
+    background: linear-gradient(153deg, rgba(151,238,234,1) 0%, rgba(120,226,112,1) 100%);
+    height: 98vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 header{
     text-align: center;
     border-bottom: solid;
+    font-size: 45px;
 }
+
+.score_board{
+    display: flex;
+    flex-direction: row;
+    padding: 20px 0px 20px 0px;
+    font-size: 18px;
+    border-bottom: solid;
+  }
+  
+  #score_container{
+    padding: 0 50px 0 50px;
+  }
+  
+  .game_board{
+    margin: 20px;
+    border: solid 5px;
+    height: 750px;
+    width: 750px;
+    position: relative;
+  }
+  
+  #instructionForm h1 {
+    text-align: center;
+  }
+  
+  #ball {
+    width: 50px;
+    height: 50px;
+    visibility: hidden;
+    border-radius: 50%;
+    background: red;
+    position: absolute;
+    top: 90px;
+    left: 90px;
+  }
+  
+  .container {
+    overflow: hidden;
+  }
+  
+  .hole {
+    visibility: hidden;
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    z-index: -2;
+    position: absolute;
+    background: #000000;
+  }
+  
+  #instructionForm button {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    height: 150px;
+    font-size: 3em;
+    border-radius: 20px;
+    background-color: #86e35d;
+  }
