--- a/Laboratorium 9 - WeatherApp/style.css
+++ b/Laboratorium 9 - WeatherApp/style.css
@@ -99,3 +99,65 @@ input::placeholder{
     color: #fff;
     text-decoration: none;
 }
+
+main {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+.weather-container{
+    position: relative;
+    color: #fff;
+    width: 13em;
+    height: 13em;
+    margin: 30px;
+    padding: 20px 20px 20px 30px;
+    background-image: linear-gradient(135deg, #75cbe0 0%, #345688 100%);
+    border-radius: 10px;
+    box-shadow: 0 0.9rem 1.2rem rgba(0,0,0, 0.1);
+}
+
+.city{
+    text-align: center;
+    margin-top: 10px;
+}
+
+.weather-img{
+    float: right;
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    transform: translateY(-40px);
+}
+
+.weather-img img{
+    object-fit: cover;
+    width: 130px;
+}
+
+.desc {
+    clear: both;
+    font-size: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    transform: translateY(-120px);
+}
+
+.temp{
+    font-size: 60px;
+    transform: translateY(-65px);
+}
+
+.img, .temp{
+    display: inline-block;
+}
+
+.wind, .pressure{
+    padding-left: 30px;
+    text-align: center;
+    display: table-cell;
+    transform: translateY(-120px);
+    mix-blend-mode: overlay;
+}
